Fixed the timeslot alignment

--- a/patient-client/src/styles/booking.css
+++ b/patient-client/src/styles/booking.css
@@ -64,3 +64,10 @@
 .timeslot .time:hover{
     background-color: #5d5fef;
 }
+
+.slots{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
